--- a/src/css/section6.css
+++ b/src/css/section6.css
@@ -27,8 +27,8 @@
   position: relative;
 }
 .section6 .gird .flex img {
-  height: 100%;
-  width: 100%;
+  height: 280px;
+  width: 250px;
   transition: 0.5s ease;
   -webkit-transition: 0.5s ease;
   -moz-transition: 0.5s ease;
